em/skin/theme_resources/stylesheets/foundation.css
/* ... */
#post-header .row.text-content .post-author {
  font-weight: bold;
}

body.template-author h2 {
    text-decoration: underline;
    color: #205C90;
    display: inline;
}

#other-published-stuff dd.featuredItem img {
    float: left;
    margin:  0 1em 0.5em;
}

#other-published-stuff dd.featuredItem {
    min-height: 150px;
}

/* ----------------------------------------- Video Upload Form
----------------------------------------- */

.template-publish_video #mid-container .documentFirstHeading {
  padding: 16px 12px;
  background: #f3f3f5;
  color: #333;
  font-size: 24px;
  font-weight: bold;
  margin: 0 8px;
  -moz-box-shadow: 0 1px 4px rgba(0,0,0,0.17);
  -ms-box-shadow: 0 1px 4px rgba(0,0,0,0.17);
  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.17);
  box-shadow: 0 1px 4px rgba(0,0,0,0.17);
}

.template-publish_video #mid-container #uploader {
  background: #E9E9EB;
  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.17);
  -ms-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.17);
  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.17);
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.17);
  margin: 14px 8px 0 8px;
}

.template-publish_video #mid-container div.row.text-content {
  background: #C9CCD1;
  border-top: 1px solid #ddd;
  padding: 8px;
}

.template-publish_video #mid-container #uploader #fileupload div.row {
  padding: 8px;
}

#uploader #fileupload div.controls {
  margin: 0;
}

.template-publish_video #content-core div.row form {
  background: #F0F0F2;
}

#content {
  margin: -2.5em 0.25em 2em !important;
}

#content #content-core div.row ul.formTabs {
  display: block;
  overflow: auto;
  border: none;
  
  background: #C9CCD1;
  border-bottom: 1px solid #bfbfbf;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
}

#content #content-core div.row ul.formTabs li.formTab {
  display: block;
  float: left;
  margin: 0;
  padding: 0;
  border-right: 1px solid #bbb;
  background: #aaa;
  color: #efeff1;
}

#content #content-core div.row ul.formTabs li.formTab a:hover {
  color: #000;
  background: #e5e5e7;
}

#content #content-core div.row ul.formTabs li.formTab a.selected, #content #content-core div.row ul.formTabs li.formTab a:active {
  background: #efeff2;
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #efeff2), color-stop(100%, #e5e5e7));
  background: -webkit-linear-gradient(#efeff2, #e5e5e7);
  background: -ms-linear-gradient(#efeff2, #e5e5e7);
  background: -moz-linear-gradient(#efeff2, #e5e5e7);
  background: -o-linear-gradient(#efeff2, #e5e5e7);
  background: linear-gradient(#efeff2, #e5e5e7); 
  -moz-box-shadow: 0 2px 7px rgba(0,0,0,0.22);
  -ms-box-shadow: 0 2px 7px rgba(0,0,0,0.22);
  -webkit-box-shadow: 0 2px 7px rgba(0,0,0,0.22);
  box-shadow: 0 2px 7px rgba(0,0,0,0.22); 
  color: #333 !important;
}

#content #content-core div.row ul.formTabs li.formTab a {
  padding: 4px 14px;
  font-weight: bold;
  font-size: 14px;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
}

/* Inputs */

fieldset#fieldset-default.formPanel input[type="text"],
fieldset#fieldset-default.formPanel textarea,
fieldset#fieldset-0.formPanel input[type="text"],
fieldset#fieldset-0.formPanel textarea,
fieldset#fieldset-default.formPanel textarea.mce_editable {
  padding: 0.5em;
  background: #f8f8fa;
  font-size: 14px;
  border: 1px solid #bbb;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
}

fieldset#fieldset-default.formPanel input.date-widget[type="text"] {
  font-size: 12px;
  padding: 0.2em 0.5em;
}

fieldset#fieldset-default.formPanel textarea.mce_editable {
  height: 10em;
}

div.formControls {
  overflow:auto;
}

div.formControls input[type="submit"] {
  float: left;
  display: block;
  padding: 4px 5px;
  margin: 10px 10px 10px 0;
  color: #222;
  text-shadow: 0 1px 0 white;
  -moz-box-shadow: inset 0 0 1px white;
  -ms-box-shadow: inset 0 0 1px white;
  -webkit-box-shadow: inset 0 0 1px white;
  box-shadow: inset 0 0 1px white;
  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=snowfa,EndColorStr=#FFDCDCdc);
  background: #efeff2;
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #efeff2), color-stop(100%, #dfdfe2));
  background: -webkit-linear-gradient(#efeff2, #dfdfe2);
  background: -ms-linear-gradient(#efeff2, #dfdfe2);
  background: -moz-linear-gradient(#efeff2, #dfdfe2);
  background: -o-linear-gradient(#efeff2, #dfdfe2);
  background: linear-gradient(#efeff2, #dfdfe2);
  border: 1px solid #aaa;
  outline: 0;
  text-align: center;
  font-weight: bold;
  font-size: 12px;
  white-space: nowrap;
  word-wrap: normal;
  cursor: pointer;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  -ms-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
}

div.formControls input[type="submit"]:hover {
  color: #000;
  border: 1px solid #666;
  -moz-box-shadow: 0 2px 7px rgba(0,0,0,0.2);
  -ms-box-shadow: 0 2px 7px rgba(0,0,0,0.2);
  -webkit-box-shadow: 0 2px 7px rgba(0,0,0,0.2);
  box-shadow: 0 2px 7px rgba(0,0,0,0.2);
}

.videobar span {
    cursor: pointer !important;
}

div.formControls input[type="submit"]:active {
  color: #000;
  border: 1px solid #444;
  -moz-box-shadow: none;
  -ms-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  text-shadow: none;
  color: #efeff1;
  background: #555;
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #555), color-stop(100%, #777));
  background: -webkit-linear-gradient(#555, #777);
  background: -ms-linear-gradient(#555, #777);
  background: -moz-linear-gradient(#555, #777);
  background: -o-linear-gradient(#555, #777);
  background: linear-gradient(#555, #777);
}
/* ... */

